# DL-project

./: .gitignore  README.md  adaptive_sharpness_sweep.py  airbench94_muon.py  eos.py  eos_experiment.py  eos_plotting.py  eos_visualize.py  experiment.py  main.py  main2.py  math.md  plotting.py  pyproject.toml  requirements.txt  sharpness_experiment.py  sharpness_plots.py  sharpness_sweep.py  test.ipynb  tests.py
edge_of_stability/: main.py  pyproject.toml  visualize.py
edge_of_stability/networks/: utils.py
experiment_configs/: clariden-optim_all-cifar.json  stclstr-quick.json
experiment_utils/: compile.py  config.py  pyhessian_sharpness.py
optima/: main.py
optima/configs/: clariden-optim_all-cifar.json  student-optim_all-cifar.json
optima/utils/: airbench94_muon.py  compile.py  config.py  sam_sharpness.py  samlike_sharpness.py
sharpness_configs/: adaptive_sharpness_sweep.json  adaptive_sharpness_sweep_sample.json  adaptive_sharpness_sweep_test.json  clariden-optim_all-cifar.json  student-optim_all-cifar.json
sharpness_experiment/: main.py
sharpness_experiment/configs/: student-optim_all-cifar.json
sharpness_experiment/utils/: airbench94_muon.py  config.py  sam_sharpness.py
slurm/: adaptive_sweep.sbatch  asam_sweep.sbatch  clariden_adaptive_sweep.sbatch  clariden_optima_experiment.sbatch  experiment.sbatch  optima_experiment.sbatch  sbatch_template.sbatch  stream.sh
src/: __init__.py  configs.py  datasets.py  eig.py  utils.py
src/edge_of_stability/: __init__.py  configs.py  datasets.py  frozen_optim_factory.py  preconditioner_factory.py  utils.py
(+66 files in other folders)
