[project]
name = "sharpness-muon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pyhessian>=0.1",
    "scipy>=1.16.3",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "tyro>=1.0.3",
    "wandb>=0.23.1",
]
